--- a/react-app/src/app/styles/index.css
+++ b/react-app/src/app/styles/index.css
@@ -132,7 +132,7 @@ main pre {
 
 /* links */
 a:any-link {
-  color: var(--link-color);
+  /* color: var(--link-color); */
   text-decoration: none;
 }
 
