--- a/react-app/src/app/header-nav/index.css
+++ b/react-app/src/app/header-nav/index.css
@@ -1,48 +1,35 @@
-/* body header nav .nav-sections{
+body header nav .nav-sections {
   display: block;
   visibility: visible;
 }
 
-.megaMenu-megaMenu-HGZ.hidden{
-  display: block;
-} */
-
-.megaMenuItem-megaMenuItem-1TT{
+.megaMenuItem-megaMenuItem-1TT {
   font-size: 16px;
 }
 .submenu-submenu-iLX {
   background-color: #fff;
-  display: none;
 }
-
-.submenu-submenu-iLX.submenu-submenu_active-1Lj {
-  display: block;
-  position: static;
-}
-.submenu-submenuItems-3rB {
-  display: block;
-}
-
 @media (width >= 900px) {
-  .submenu-submenu-iLX{
-    position: absolute;
-  }
-  .submenu-submenu-iLX.submenu-submenu_active-1Lj {
-    display: initial;
-  }
   .megaMenuItem-megaMenuItem-1TT:hover > a + .submenu-submenu-iLX {
     display: flex;
   }
+}
+
+@media (width < 900px) {
+  .submenu-submenu-iLX.submenu-submenu_active-1Lj {
+    display: block;
+    position: static;
+  }
   .submenu-submenuItems-3rB {
-    display: flex;
+    display: block;
   }
 }
 
-.submenu-submenu-iLX{
+.submenu-submenu-iLX {
   top: 50px;
 }
 
-.header-secondaryActions-2BM{
+.header-secondaryActions-2BM {
   margin: 10px;
 }
 
@@ -251,7 +238,6 @@
 .megaMenuItem-megaMenuLink-2Rr {
   min-height: 5rem;
 }
-
 
 /* TODO @TW: cannot compose */
 .megaMenuItem-megaMenuItem-1TT:hover .megaMenuItem-megaMenuLink-2Rr,
