--- a/react-app/src/app/header-nav/index.css
+++ b/react-app/src/app/header-nav/index.css
@@ -1,7 +1,7 @@
-body header nav .nav-sections {
+/* body header nav .nav-sections {
   display: block;
   visibility: visible;
-}
+} */
 
 .megaMenuItem-megaMenuItem-1TT {
   font-size: 16px;
